# crates-language-server

./: .envrc  .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  flake.nix  justfile
.github/workflows/: rust.yml
src/: crates.rs  format.rs  lib.rs  ls.rs  main.rs  parse.rs
