[package]
name = "crates-language-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.43", features = ["full"] }

ropey = "1.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

cargo-util-schemas = "0.7"
semver = "1"

reqwest = "0.12"
url = "2.5"

thiserror = "2"
anyhow = "1"

indoc = "2"

taplo = "0.13.2"

openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
